welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:-5: warning: comparing values of types Int and Null using `==' will always yield false
   t.setResult(if (res==null||res == Nil) {null} else {res.asInstanceOf[List[Int]].asJava})
                      ^withoutDoubles:-5: warning: comparing values of types Int and scala.collection.immutable.Nil.type using `==' will always yield false
   t.setResult(if (res==null||res == Nil) {null} else {res.asInstanceOf[List[Int]].asJava})
                                  ^withoutDoubles:6: error: forward reference extends over definition of variable die1
      if (die1 == 6){
          ^