welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (!noDoubles){
    return die1+die2
  } else {
    if (die1 == die2){
      if (die1 == 6){
        var die1 = 1
      }
      var die1 : Int = die1 + 1
    }
  }
  return die1 + die2
}